--- a/JayaTraining/pom.xml
+++ b/JayaTraining/pom.xml
@@ -52,6 +52,20 @@
             <version>5.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
+
+
 
 
     </dependencies>
